--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,10 @@
 [Aa]ssets/Plugins/Editor/JetBrains*
 
 # Visual Studio cache directory
+# And Visual Studio Code workspace file
 .vs/
+.vscode/
+*.code-workspace
 
 # Gradle cache directory
 .gradle/
